--- a/css/styles.css
+++ b/css/styles.css
@@ -5,40 +5,57 @@ body {
   background-color                : #555555;
 }
 
+/* Style to create a fluid image */
+img {
+  max-width: 100%
+}
+
+/* Style for Mobile Layout */
 /* Style for container centers the page and sets the element width */
 #container {
-  width                           : 80%;
+  width                           : 100%;
   margin-left                     : auto;
   margin-right                    : auto;
 }
 
 /* Style for header specifies top and bottom margins,background color,rounded border, shadow,and alignment */
 header  {
-  margin-top                      : 10px;
-  margin-bottom                   : 20px;
-
+  margin-top                      : 0.2em;
   background-color                : #C2C2C2;
-  border-radius                   : 10px;
+  border-radius                   : 0.5em;
   text-align                      : center;
-  box-shadow                      : 12px 12px 12px #000000;
 }
 
-/* Style for nav specifies text properties, padding, margins, and borders */
+/* Style for nav specifies text properties */
 nav {
   font-family                     : Georgia, "Times New Roman", serif;
   font-size                       : 1.25em;
   font-weight                     : bold;
   text-align                      : center;
   padding                         : 20px;
-  background-color                : #C2C2C2;
-  margin-top                      : 10px;
-  margin-bottom                   : 10px;
-  border-radius                   : 10px;
-  border-top                      : 10px solid #C2C2C2;
-  border-bottom                   : 50px #C2C2C2;
-  box-shadow                      : 12px 12px 12px #000000;
 }
 
+/* Style specifies padding and margins for unordered list */
+nav ul {
+  padding: 0;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+/* Style for nav li specifies the background color, rounded corners, removes bullet style, and applies margins and padding for list items within the navigation*/
+nav li {
+  background-color: #009933;
+  border-radius: 2em;
+  list-style-type: none;
+  margin: 0.3em;
+  padding: 0.4em;
+}
+
+/* Style changes navigation link text color to white and removes the underline */
+nav li a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
 /* Style for main specifies a block display, text properties,margins, padding, rounded border, and shadow */
 main {
   display                         : block;
