--- a/template/fitness.html
+++ b/template/fitness.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="utf-8">
     <title>Forword Fitness Club</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 
